openapi: add routes to request fetch by other_id
