# api/v1/oas_server_gen.go
@@ -14,6 +14,12 @@ type Handler interface {
 	//
 	// POST /get-organization
 	GetOrganization(ctx context.Context, req *GetOrganizationRequest) (*Organization, error)
+	// GetOrganizationByOtherId implements GetOrganizationByOtherId operation.
+	//
+	// Get single organization record by one of its extra identifiers.
+	//
+	// POST /get-organization-by-other-id
+	GetOrganizationByOtherId(ctx context.Context, req *GetOrganizationByOtherIdRequest) (*Organization, error)
 	// GetOrganizations implements GetOrganizations operation.
 	//
 	// Get all organization records.
@@ -32,6 +38,12 @@ type Handler interface {
 	//
 	// POST /get-person
 	GetPerson(ctx context.Context, req *GetPersonRequest) (*Person, error)
+	// GetPersonByOtherId implements GetPersonByOtherId operation.
+	//
+	// Retrieve a single person record by one of its extra identifiers.
+	//
+	// POST /get-person-by-other-id
+	GetPersonByOtherId(ctx context.Context, req *GetPersonByOtherIdRequest) (*Person, error)
 	// SetPersonOrcid implements SetPersonOrcid operation.
 	//
 	// Update person ORCID.
